--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ monitor=eDP-1,1920x1080@60,0x0,1.2
 
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
 #################
