--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -229,7 +229,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, F, exec, hyprpicker -af hex  
+bind = $mainMod SHIFT, F, exec, hyprpicker -af hex  
 bind = $mainMod SHIFT, Print , exec, hyprshot -m region  --clipboard-only
 
 # Move focus with mainMod + arrow keys
