--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -9,10 +9,10 @@
 # you can get started by copying this config to ~/.config/hypr/hyprlock.conf
 #
 
-$font = Monospace
+$font = HurmitNerdFont
 
 general {
-    hide_cursor = false
+    hide_cursor = true
 }
 
 # uncomment to enable fingerprint authentication
@@ -45,9 +45,9 @@ input-field {
     outline_thickness = 3
     inner_color = rgba(0, 0, 0, 0.0) # no fill
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+    outer_color = rgb(35, 42, 52) rgb(115, 123, 126)  40deg
+    check_color = rgb(115, 123, 126) rgb(35, 42, 52) 400deg
+    fail_color = rgb(154, 13, 53)  rgb(103, 7, 35) 40deg
 
     font_color = rgb(143, 143, 143)
     fade_on_empty = false
@@ -55,7 +55,7 @@ input-field {
 
     font_family = $font
     placeholder_text = Input password...
-    fail_text = $PAMFAIL
+    fail_text = 
 
     # uncomment to use a letter instead of a dot to indicate the typed password
     # dots_text_format = *
