--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/hypr/wallpapers/3.png
-wallpaper =eDP-1, ~/.config/hypr/wallpapers/3.png   
+preload = /home/karol/Dotfiles/hypr/.config/hypr/wallpapers/
+wallpaper =eDP-1, /home/karol/Dotfiles/hypr/.config/hypr/wallpapers/   
