--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,4 @@
-preload = /home/karol/Dotfiles/hypr/.config/hypr/wallpapers/
-wallpaper =eDP-1, /home/karol/Dotfiles/hypr/.config/hypr/wallpapers/   
+wallpaper {
+    monitor = eDP-1
+    path = /home/karol/Dotfiles/hypr/.config/hypr/wallpapers/3.png
+}
