--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -33,6 +33,8 @@ $menu = rofi -show drun
  exec-once = $terminal
 # exec-once = nm-applet &
  exec-once =  waybar & hyprpaper 
+ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
 
 
 #############################
@@ -43,6 +45,9 @@ $menu = rofi -show drun
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+
+
 
 
 ###################
@@ -173,6 +178,7 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    disable_splash_rendering = true
     font_family = HurmitNerdFont Mono
 }
 
