--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ monitor=eDP-1,1920x1080@60,0x0,1.2
 # Set programs that you use
 
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun
 
 
